          ForeignKey/ManyToManyField to the model) should have a method 'portable_key()',
          & their default manager should have a method 'get_by_portable_key()'.
          See the doc-string of 'CremeEntity.portable_key()' for more details.
        # App :
            * Activities :
                - The model 'Calendar' got an 'uuid' field.

    Breaking changes :
    ------------------
        # Deprecated stuffs which have been removed :
            - The settings 'ENUMERABLE_REGISTRATION_ERROR' has been removed.
            - In 'creme_core.constants', 'DEFAULT_CURRENCY_PK' & 'DISPLAY_CURRENCY_LOCAL_SYMBOL' have been removed.
            - In 'creme_core.core' :
                - The method 'entity_cell.EntityCellCustomField.build()' does not accept integer "value" anymore.
                - These aliases have been removed :
                  'EntityCellsRegistry', '_EntityFilterRegistry', '_EntityFilterSuperRegistry',
                  '_EnumerableRegistry', '_FunctionFieldRegistry', '_ImprintManager',
                  '_SandboxTypeRegistry', '_SettingKeyRegistry', 'ReplacersRegistry'
            - In 'creme_core.gui', these aliases have been removed :
             'ActionsRegistry', 'ActionsChain', 'actions_registry',
             '_BrickRegistry', 'BricksManager', '_BulkUpdateRegistry',
             'ButtonsRegistry', '_FieldPrintersRegistry', 'field_printers_registry',
             'QuickFormsRegistry', 'quickforms_registry',
             '_StatisticsRegistry', 'statistics_registry'.
            - In 'creme_core.models' :
                - The method 'CremePropertyTypeManager.smart_update_or_create()' has been removed.
                - These methods of 'CremeEntity' (& sub-classes) have been removed :
                    - clone()
                    - _clone_object()
                    - _clone_custom_values()
                    - _clone_m2m()
                    - _copy_properties()
                    - _copy_relations()